# C-Address-Onboarding-Bridge--Contract

./: .gitignore  README.md  TESTING.md  package.json
contracts/onboarding-bridge/: Cargo.toml
contracts/onboarding-bridge/src/: lib.rs  tests.rs
contracts/onboarding-bridge/test_snapshots/benchmarks/: bench_admin_setters.1.json  bench_batch_1.1.json  bench_batch_10.1.json  bench_batch_5.1.json  bench_batch_50.1.json  bench_fund_c_address_large.1.json  bench_fund_c_address_medium.1.json  bench_fund_c_address_small.1.json  bench_initialize_cold.1.json  bench_initialize_warm.1.json  bench_views.1.json  bench_withdraw_fees_large.1.json  bench_withdraw_fees_medium.1.json  bench_withdraw_fees_small.1.json
contracts/onboarding-bridge/test_snapshots/integration_tests/: integration_fee_accumulates_in_bridge.1.json  integration_fund_transfers_tokens_to_target.1.json  integration_multiple_tokens_simultaneously.1.json  integration_withdraw_fees_to_fee_collector.1.json
contracts/onboarding-bridge/test_snapshots/tests/: test_add_asset_is_idempotent.1.json  test_add_asset_whitelists_it.1.json  test_admin_changed_emits_event.1.json  test_allowlist_mode_allows_allowlisted.1.json  test_allowlist_mode_blocks_non_allowlisted.1.json  test_allowlist_mode_off_allows_all.1.json  test_batch_100_targets.1.json  test_batch_all_blocked_full_refund.1.json  test_batch_blocked_target_skipped_and_refunded.1.json  test_batch_duplicate_targets.1.json  test_batch_empty.1.json  test_batch_empty_array_no_events.1.json  test_batch_exceeds_max_size.1.json  test_batch_fund_all_zeros_fails.1.json  (+81 more)
(+39 files in other folders)
