[package]
name = "onboarding-bridge"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = "26.1.0"

[dev-dependencies]
soroban-sdk = { version = "26.1.0", features = ["testutils"] }
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }

[features]
testutils = ["soroban-sdk/testutils"]
